[package]
name = "stb_truetype"
version = "0.2.1"
authors = ["Dylan Ede <dylanede@googlemail.com>"]
description = "A straight translation of the font loading code in stb_truetype.h from C to Rust."
documentation = "https://docs.rs/stb_truetype-rs"
repository = "https://github.com/redox-os/stb_truetype-rs"
readme = "README.md"
license = "MIT / Apache-2.0"
keywords = ["font", "truetype", "opentype", "ttf", "otf"]

[dependencies]
byteorder = "1.0"
