[package]
name = "stb_truetype"
version = "0.2.8"
authors = ["Dylan Ede <dylanede@googlemail.com>", "Alex Butler <alexheretic@gmail.com>"]
edition = "2018"
description = "A straight translation of the font loading code in stb_truetype.h from C to Rust."
documentation = "https://docs.rs/stb_truetype-rs"
repository = "https://gitlab.redox-os.org/redox-os/stb_truetype-rs"
readme = "README.md"
license = "MIT / Apache-2.0"
keywords = ["font", "truetype", "opentype", "ttf", "otf"]
exclude = ["/fonts/**"]

[dependencies]
# 0.3 is identical when using default-features
stb_truetype_next = { version = "0.3", package = "stb_truetype" }
